# parse-changelog

./: .cspell.json  .deny.toml  .external-types.toml  .git-blame-ignore-revs  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/: dependabot.yml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  fuzz.yml  release.yml
bench/: Cargo.toml  parse.rs
benches/: Cargo.toml  parse.rs
ci/: upload-assets.sh
fuzz/: .gitignore  Cargo.toml  parse.rs
fuzz/afl/: .gitignore  Cargo.toml  parse.rs
fuzz/afl/in/: atx01.md  setext01  setext01.md  setext02
fuzz/libfuzzer/: Cargo.toml
fuzz/seeds/parse/: atx01.md  setext01.md
src/: error.rs  lib.rs  main.rs  rustdoc.css
src/tests/: mod.rs
tests/: cli.rs  long-help.txt  short-help.txt  test.rs
tests/auxiliary/: cli.rs  mod.rs
tests/fixtures/: cargo-1.50.md  cargo-1.77.1.md  cargo.md  pin-project-1.0.0.md  pin-project-latest.md  pin-project.md  rust-1.46.0-atx.md  rust-1.46.0.md  rust-atx.md  rust-latest.md  rust.md
tools/: gen.sh
tools/codegen/: Cargo.toml
tools/codegen/src/: file.rs  main.rs
