[package]
name = "parse-changelog"
version = "0.6.3"
edition = "2021"
rust-version = "1.65"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/parse-changelog"
keywords = ["changelog", "parser"]
categories = ["command-line-utilities", "parser-implementations"]
exclude = ["/.*", "/tools"]
description = """
Simple changelog parser, written in Rust.
"""

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[workspace]
resolver = "2"
members = ["bench", "tools/codegen"]

[lib]
doc-scrape-examples = false

[[bin]]
name = "parse-changelog"
required-features = ["default"]

[features]
# When using this crate as a library, we recommend disabling the default features.
default = ["anyhow", "lexopt", "serde", "serde_json"]
# Implements serde::Serialize trait for parse-changelog types.
serde = ["dep:serde", "dep:serde_derive", "indexmap/serde"]

# Note: indexmap and serde are public dependencies.
[dependencies]
indexmap = "2"
memchr = "2.4"
once_cell = "1"
regex = "1.3"

anyhow = { version = "1.0.34", optional = true }
lexopt = { version = "0.3", optional = true }
serde = { version = "1.0.165", optional = true }
serde_derive = { version = "1.0.165", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
easy-ext = "1"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
