[package]
name = "bench"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
parse-changelog = { path = "..", default-features = false }

criterion = { default-features = false, git = "https://github.com/taiki-e/criterion.rs.git", branch = "dev" } # reduce deps

[[bench]]
name = "parse"
path = "parse.rs"
harness = false

[lints]
workspace = true
