[package]
name = "fuzz"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
libfuzzer = ["dep:libfuzzer-sys"]

[dependencies]
parse-changelog = { path = "..", default-features = false }

libfuzzer-sys = { version = "0.4", optional = true }
afl = { version = "0.15", optional = true }
honggfuzz = { version = "0.5", optional = true, default-features = false }

[[bin]]
name = "parse"
path = "parse.rs"
test = false
doc = false

[workspace]
resolver = "2"

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
