[package]
name = "fuzz"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
afl = ["dep:afl"]
honggfuzz = ["dep:honggfuzz"]
libafl = ["dep:libafl_libfuzzer"]
libfuzzer = ["dep:libfuzzer-sys"]

[dependencies]
parse-changelog = { path = "..", default-features = false }

afl = { version = "0.17", optional = true }
honggfuzz = { version = "0.5", optional = true, default-features = false }
libafl_libfuzzer = { version = "0.15", optional = true }
libfuzzer-sys = { version = "0.4", optional = true }

[[bin]]
name = "parse"
path = "parse.rs"
test = false
doc = false

[workspace]
resolver = "2"

# This table is shared by projects under github.com/taiki-e.
# Expect for unexpected_cfgs.check-cfg, it is not intended for manual editing.
[lints.rust]
deprecated_safe = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
] }
# unnameable_types = "warn"
# unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
