[package]
name = "fuzz-afl"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[workspace]
resolver = "2"

[dependencies]
parse-changelog = { path = "../..", default-features = false }

afl = "0.10"

[[bin]]
name = "parse"
path = "parse.rs"
test = false
doc = false

[profile.release]
debug = true
