[package]
name = "fuzz-afl"
version = "0.0.0"
edition = "2018"
publish = false

[workspace]
resolver = "2"

[dependencies]
parse-changelog = { path = "../..", default-features = false }

afl = "0.11"

[[bin]]
name = "parse"
path = "parse.rs"
test = false
doc = false

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
